--- a/animated-navigation/index.html
+++ b/animated-navigation/index.html
@@ -59,7 +59,7 @@
   <!-- Sections -->
   <section id="home">
     <div class="loader" id="loader">
-      <img src="/img/loader.svg" alt="loader-spinner">
+      <img src="./img/loader.svg" alt="loader-spinner">
     </div>
     <a href="/">Nirvana Lab.</a>
   </section>
@@ -240,18 +240,18 @@
         <div class="projects-row">
           <div class="projects-col-4">
             <div class="projects-info-wrapper">
-              <h3 class="projects-info-title">シネックスジャパン株式会社 様</h3>
+              <h3 class="projects-info-title">Natours 様</h3>
               <p class="projects-info-description">
-                HTML, CSSのコーディングをゼロから担当させていただきました。
+                主にコーディングを担当しました。
               </p>
-              <button class="bw" type="button" onclick="window.open('https://www.nexpect.jp/edu_sol/')">
+              <button class="bw" type="button" onclick="window.open('https://nirvana-life.com/coding_sample_01/')">
                 See Live
               </button>
             </div>
           </div>
           <div class="projects-col-8">
             <div class="projects-img-wrapper">
-              <a href="https://www.nexpect.jp/edu_sol/" target="_blank">
+              <a href="https://nirvana-life.com/coding_sample_01/" target="_blank">
                 <div data-tilt="" class="thumbnail rounded">
                   <img class="img-fluid" src="img/project-02-thumbnail.png">
                 </div>
